--- a/package.json
+++ b/package.json
@@ -41,13 +41,17 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^11.0.11",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.17.19",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
     "prisma": "^5.10.2",
     "source-map-support": "^0.5.21",
+    "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
