--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8.56.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
     "jest": "^29.7.0",
     "prisma": "^5.10.2",
     "source-map-support": "^0.5.21",
