--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -119,16 +119,27 @@ jobs:
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         id: terraform_outputs
         run: |
-          echo "cloud_run_url=$(terraform output -raw cloud_run_url)" >> $GITHUB_OUTPUT
+          echo "app_url=$(terraform output -raw app_url)" >> $GITHUB_OUTPUT
           echo "database_connection=$(terraform output -raw database_connection)" >> $GITHUB_OUTPUT
           echo "redis_host=$(terraform output -raw redis_host)" >> $GITHUB_OUTPUT
+          echo "rabbitmq_url=$(terraform output -raw rabbitmq_url)" >> $GITHUB_OUTPUT
+          echo "rabbitmq_management_url=$(terraform output -raw rabbitmq_management_url)" >> $GITHUB_OUTPUT
         continue-on-error: true
 
-      - name: Update Environment Secrets
+      - name: Update Database Environment Secret
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: ${{ steps.env_vars.outputs.environment == 'production' && 'PRODUCTION_DATABASE_URL' || 'STAGING_DATABASE_URL' }}
           value: ${{ steps.terraform_outputs.outputs.database_connection }}
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+        continue-on-error: true
+        
+      - name: Update RabbitMQ Environment Secret
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+        uses: hmanzur/actions-set-secret@v2.0.0
+        with:
+          name: ${{ steps.env_vars.outputs.environment == 'production' && 'PRODUCTION_RABBITMQ_URL' || 'STAGING_RABBITMQ_URL' }}
+          value: ${{ steps.terraform_outputs.outputs.rabbitmq_url }}
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
         continue-on-error: true
