Clean up Terraform configuration by removing unnecessary variables

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,4 +1,5 @@
 # GCP Project Configuration
-project_id = "your-project-id"
-region     = "us-central1"
-zone       = "us-central1-a"
+project_id  = "your-project-id"
+region      = "us-central1"
+zone        = "us-central1-a"
+environment = "staging" # or "production"
